# CppTesting

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  conan-setup.cmd  conanfile.txt
src/: main.cpp
